# ai

./: .gitignore  app.py  pyproject.toml  readme.md  robot_sessions_detailed.xlsx  robot_sessions_detailed_updated.xlsx  session_notes.md
.claude/: settings.local.json
hardware/: README.md
hardware/phase_1/: PrusaSlicer_config_bundle.ini  battery_box_end.stl  battery_box_side.stl  bottom_deck_l.stl  bottom_deck_r.stl  camera_bar.stl  camera_bar_r.stl  camera_bar_r_actual.stl  chassis_gemini.scad  chassis_v2.scad  chassis_v2_full.scad  chassis_v3.scad  design.scad  design_notes.txt  leg.stl  lower_strut.stl  prusa_max.scad  prusa_max.stl  side_box.stl  side_box_end.stl  side_box_end_switch.stl  side_box_outer.stl  side_box_rail.stl  sonor_mount.stl  test_clip.stl  top_deck_l.stl  top_deck_r.stl  wheel.scad
hardware/phase_1/.claude/: settings.local.json
hardware/vision learning chassis/: assembly_visualization.scad  camera_stereo_bar.scad  design.scad  vision_test_chassis.scad
learning/: README.md
learning/computer_vision/r_vision/: contour_detection_lesson.py  edge_detection_lesson.py  hsv_bounded_stereo_lesson_gemini.py  test_cameras.py  test_display.py
learning/openscad/basics/: cylinder.scad
learning/python_fundamentals/basics/amentals/: simple_ml.py
maintenance/: reorganize_folders_1-24-26.ps1  reorganize_log_20260125_052929.txt
src/learning/02_computer_vision/: color_space_lesson.py  contour_detection_lesson.py  floor_detection_gemini.py  hello_opencv.py  hsv_bounded_stereo_lesson.py
tests/: power_test.py  pwm_test.py  test_devices.py
