[project]
name = "robot-vision-ai"
version = "0.1.0"
description = "Learning AI and robotics - autonomous robot with object recognition"
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "pillow>=10.0.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"